# FinanceSail

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
admin/: index.html  package.json  vite.config.js
config/: .env.example  subscribers.json
data/: holidays.json
data_provider/: __init__.py  akshare_fetcher.py  base.py  fundamental_adapter.py  tushare_fetcher.py  yfinance_fetcher.py
docker/: Dockerfile
docs/: API.md  CONFIG.md  STRATEGIES.md
nginx/: finance-sail.conf
scripts/: deploy.sh
src/: analyzer.py  enums.py  main.py  strategies.py
src/api/: __init__.py  auth.py  config_api.py  content.py  distribution.py  logs.py  subscriptions.py  users.py
src/charts/: stock_charts.py
src/collectors/: a_share.py  base.py  fallback.py  hk_stock.py  hot_search.py  ipo.py  news.py  us_stock.py
src/config/: constants.py  project.py  settings.py
src/core/: __init__.py  config_manager.py  pipeline.py  trading_calendar.py
src/distributors/: __init__.py  toutiao.py  wechat.py  xiaohongshu.py
src/exceptions/: errors.py  handler.py
src/generators/: base.py  hot_stock.py  ipo_analysis.py  market_summary.py
src/models/: db.py
src/monitors/: stock_monitor.py
src/notification_sender/: __init__.py  (+5 more)
strategies/: bull_trend.yaml  chan_theory.yaml  ma_golden_cross.yaml  wave_theory.yaml
templates/: report_markdown.j2  report_wechat.j2
tests/: test_analyzer.py  test_data_provider.py  test_e2e_notification.py  test_notification_sender.py  test_pipeline_integration.py
(+46 files in other folders)
